--- a/Mainpage.html
+++ b/Mainpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giulianos Presentation about the Economic Relations of Australia</title>
+    <title>Giuliano's Presentation about the Economic Relations of Australia</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -57,25 +57,30 @@
             width: 100%;
             bottom: 0;
         }
+        img.flag {
+            width: 200px; /* Increase width */
+            margin-bottom: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Giulianos Presentation about the Economic Relations of Australia</h1>
+        <h1>Giuliano's Presentation about the Economic Relations of Australia</h1>
     </header>
     <main>
         <section>
+            <img src="https://th.bing.com/th?id=ODL.7c39b36fabb2c627e68dbc993931328a&w=162&h=81&c=10&rs=1&qlt=99&o=6&pid=AlgoBlockDebug" alt="Australian Flag" class="flag">
             <ul>
-                <li><a href="Page 1.html">Australia x Germany</a></li>
-                <li><a href="Page 2.html">Trading</a></li>
-                <li><a href="Page 3.html">World Bank - Australia</a></li>
-                <li><a href="Page 4.html">OECD - Australia</a></li>
-                <li><a href="Page 5.html">IMF - Australia</a></li>
+                <li><a href="Page 1.html">Topics</a></li>
+                <li><a href="Page 2.html">Germany x Australia</a></li>
+                <li><a href="Page 3.html">Trading</a></li>
+                <li><a href="Page 4.html">Bilateral relations</a></li>
+                <li><a href="Page 5.html">Conclusion and acknowledgments</a></li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Australia's Economic Relations</p>
+        <p>&copy; 2023 Australia's Economic Relations</p>
     </footer>
 </body>
 </html>
