--- a/Page 1.html
+++ b/Page 1.html
@@ -1,4 +1,54 @@
-Hello World
-<ul>
-    <li><a href="Mainpage.html" >Back to Mainpage</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Topics</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+        main {
+            padding: 20px;
+        }
+        section {
+            margin: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Topics</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Germany x Australia</h2>
+            <p>Details about the economic relations between Germany and Australia.</p>
+        </section>
+        <section>
+            <h2>Trading</h2>
+            <p>Information about trading activities between Australia and other countries.</p>
+        </section>
+        <section>
+            <h2>Bilateral relations</h2>
+            <p>Insights into the bilateral relations of Australia with other nations.</p>
+        </section>
+        <section>
+            <h2>Conclusion and acknowledgments</h2>
+            <p>What are Australia's benefits in the global market</p>
+        </section>
+        <ul>
+            <li><a href="Mainpage.html">Back to Mainpage</a></li>
+        </ul>
+    </main>
+</body>
+</html>
