--- a/Mainpage.html
+++ b/Mainpage.html
@@ -74,7 +74,7 @@
                 <li><a href="Page 1.html">Topics</a></li>
                 <li><a href="Page 2.html">Germany x Australia</a></li>
                 <li><a href="Page 3.html">Trading</a></li>
-                <li><a href="Page 4.html">Bilateral relations</a></li>
+                <li><a href="Page 4.html">Bilateral Partnerships</a></li>
                 <li><a href="Page 5.html">Conclusion and acknowledgments</a></li>
             </ul>
         </section>
