--- a/Page 1.html
+++ b/Page 1.html
@@ -31,21 +31,25 @@
     </header>
     <main>
         <section>
-            <h2>Germany x Australia</h2>
-            <p>Details about the economic relations between Germany and Australia.</p>
+            <h1>Germany x Australia</h2>
+            <h3>Details about the economic relations between Germany and Australia.</h3>
+            <br><br>
         </section>
         <section>
-            <h2>Trading</h2>
-            <p>Information about trading activities between Australia and other countries.</p>
+            <h1>Trading</h1>
+            <h3>Information about trading activities between Australia and other countries.</h3>
+            <br><br>
         </section>
         <section>
-            <h2>Bilateral relations</h2>
-            <p>Insights into the bilateral relations of Australia with other nations.</p>
+            <h1>Bilateral relations</h1>
+            <h3>Insights into the bilateral relations of Australia with other nations.</h3>
         </section>
+        <br><br>
         <section>
-            <h2>Conclusion and acknowledgments</h2>
-            <p>What are Australia's benefits in the global market</p>
+            <h1>Conclusion and acknowledgments</h1>
+            <h3>What are Australia's benefits in the global market</h3>
         </section>
+        <br><br>
         <ul>
             <li><a href="Mainpage.html">Back to Mainpage</a></li>
         </ul>
