--- a/Page 2.html
+++ b/Page 2.html
@@ -1,4 +1,50 @@
-Hello World 2
-<ul>
-    <li><a href="Mainpage.html" >Back to Mainpage</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Germany x Australia</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+        main {
+            padding: 20px;
+        }
+        h1 {
+            margin: 20px 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Germany x Australia</h1>
+    </header>
+    <main>
+        <br><br>
+        <br><br>
+        <br><br>
+        <h2>Germany exported 12.4 billion dollars of products to Australia</h2>
+        <br><br>
+        <h2>Most of the Products that got delivered to Australia were Cars and Packaged Medicaments</h2>
+        <br><br>
+        <h2>The exports of Germany increased by 2.99%</h2>
+        <br><br>
+        <ul>
+            <img src="https://th.bing.com/th/id/OIP.nmNkYlkiMfbrGoiA3z6n3gHaE8?w=269&h=180&c=7&r=0&o=5&pid=1.7" alt="Australian Flag" class="flag">
+            <br><br>
+            <br><br>
+            <li><a href="Mainpage.html">Back to Mainpage</a></li>
+        </ul>
+    </main>
+</body>
+</html>
