--- a/Page 3.html
+++ b/Page 3.html
@@ -1,4 +1,50 @@
-Hello World 3
-<ul>
-    <li><a href="Mainpage.html" >Back to Mainpage</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trading</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+        main {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Trading</h1>
+    </header>
+    <main>
+        <h1>Trading Partners and growth in Trading activities</h1>
+        <br><br>
+        <br><br>
+        <h2>China 9.3% growth</h2>
+        <br><br>
+        <h2>US 12.4% growth</h2>
+        <br><br>
+        <h2>New Zealand 10.8% growth </h2>
+        <br><br>
+        <h2>UK 23.8% growth</h2>
+        <br><br>
+        <h2>Thailand 18.4% growth</h2>
+        <br><br>
+        <br><br>
+
+        <ul>
+            <li><a href="Mainpage.html">Back to Mainpage</a></li>
+        </ul>
+    </main>
+</body>
+</html>
