--- a/Page 4.html
+++ b/Page 4.html
@@ -1,4 +1,47 @@
-Hello World 4
-<ul>
-    <li><a href="Mainpage.html" >Back to Mainpage</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bilateral Partnerships</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+        main {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Bilateral Partnerships</h1>
+    </header>
+    <main>
+        <h1>Things that promote sustainable economic growth by trading with biliteral Partners.</h1>
+        <br><br>
+        <h2>Humanitarian needs</h2>
+        <br><br>
+        <h2>Health services</h2>
+        <br><br>
+        <h2>Water, sanitation and hygiene</h2>
+        <br><br>
+        <h2>Education</h2>
+        <br><br>
+        <br><br>
+        <br><br>
+        <ul>
+            <li><a href="Mainpage.html">Back to Mainpage</a></li>
+        </ul>
+    </main>
+</body>
+</html>
