--- a/Page 5.html
+++ b/Page 5.html
@@ -1,5 +1,45 @@
-Hello World 5
-
-<ul>
-    <li><a href="Mainpage.html" >Back to Mainpage</a></li>
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Conclusion and acknowledgments</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+        main {
+            padding: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Conclusion and acknowledgments</h1>
+    </header>
+    <main>
+        <h1>How is Australia important for the World Market now?</h1>
+        <br><br>
+        <br><br>
+        <h2>Got many important Trading partnerships</h2>
+        <br><br>
+        <h2>Its an important Partner of Germany with 12.4b$ in Trades</h2>
+        <br><br>
+        <h2>Australia is a natural gateway for startups all over the world/h2>
+            <br><br>
+            <br><br>
+        <ul>
+            <li><a href="Mainpage.html">Back to Mainpage</a></li>
+        </ul>
+    </main>
+</body>
+</html>
