--- a/Page 1.html
+++ b/Page 1.html
@@ -64,8 +64,9 @@
                 <h1>Bilateral relations</h1>
                 <h2>Insights into the bilateral relations of Australia with other nations.</h2>
                 <br><br>
-                <h1>Thanks for listening</h1>
-                <h2>Conclusion and acknowledgments.</h2>
+                <h1>Conclusion and acknowledgments</h1>
+    
+        
                 <br><br>
             </div>
             <div class="image">
