--- a/Mainpage.html
+++ b/Mainpage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giuliano's Presentation about the Economic Relations of Australia</title>
+    <title>The Economic Relations of Australia</title>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
