--- a/Mainpage.html
+++ b/Mainpage.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1>Giuliano's Presentation about the Economic Relations of Australia</h1>
+        <h1>The Economic Relations of Australia</h1>
     </header>
     <main>
         <section>
