--- a/Mainpage.html
+++ b/Mainpage.html
@@ -80,7 +80,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Australia's Economic Relations</p>
+        <p>2025 Australia's Economic Relations</p>
     </footer>
 </body>
 </html>
